2008-02-06  Corinna Vinschen  <corinna@vinschen.de>

	Remove dependency from Cygwin internal code.
	* Makefile.in (CYGWIN_OBJS): Remove smallprint.o.
	(cygserver.exe): Remove strfuncs.o
	(strfuncs.o): Drop rule.
	* bsd_log.cc (_vlog): Use snprintf/vsnprintf instead of
	__small_sprintf/__small_vsprintf.
	* sysv_sem.cc (seminit): Use sys_malloc instead of malloc.  Use
	snprintf instead of __small_sprintf.
	(semunload): Free the above allocated sema_mtx names here.

2008-02-03  Brian Dessent  <brian@dessent.net>

	* Makefile.in: Don't link strfuncs.o from the Cygwin build dir.
	Build it again with __OUTSIDE_CYGWIN__ defined.

2007-11-05  Corinna Vinschen  <corinna@vinschen.de>

	* bsd_helper.cc (tunable_params): Add kern.ipc.shm_allow_removed as
	bool parameter.
	* cygserver.conf: Add a description for the kern.ipc.shm_allow_removed
	parameter.
	* sysv_shm.cc (shminit): Set shm_allow_removed variable according to
	kern.ipc.shm_allow_removed setting.

2007-08-02  Corinna Vinschen  <corinna@vinschen.de>

	* smallprint.c: Remove.

2007-08-02  Christopher Faylor  <me+cygwin@cgf.cx>

	* Makefile.in: Add -lntdll to link line.
	(CYGWIN_OBJS): Include strfuncs.o.

2007-08-02  Corinna Vinschen  <corinna@vinschen.de>

	* smallprint.c: New file.
	* Makefile.in (OBJS): Add smallprint.o.
	(CYGWIN_OBJS): Remove smallprint.o from Cygwin dir.

2007-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* bsd_helper.cc: Drop unnecessary security.h include.

2007-02-23  Corinna Vinschen  <corinna@vinschen.de>

	Throughout remove using wincap.
	* Makefile.in (OBJS): Remove wincap.o.
	* README: Don't mention 9x.
	* bsd_mutex.cc (_mtx_unlock): Drop checking for 9x error codes.
	* cygserver.cc (server_submission_loop::request_loop): Add FIXME
	comment.
	* wincap.cc: Remove.
	* wincap.h: Remove.
	* woutsup.h: Don't include wincap.h.

2007-02-22  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (OBJS): Drop transport_sockets.o.
	* sysv_shm.cc (shmget_allocate_segment): Remove spurious cast.